OSDOP-371 - Implemented EDU sign out of all apps integration with WIOS (#454)