@@ -1,21 +1,26 @@
 package uk.co.nstauthority.offshoresafetydirective.authentication;
 
 import java.io.Serializable;
+import java.util.Objects;
 import org.springframework.security.core.AuthenticatedPrincipal;
 
-public record ServiceUserDetail(Long wuaId,
-                                Long personId,
-                                String forename,
-                                String surname,
-                                String emailAddress)
-    implements AuthenticatedPrincipal, Serializable {
+public record ServiceUserDetail(
+    Long wuaId,
+    Long personId,
+    String forename,
+    String surname,
+    String emailAddress,
+    Long proxyWuaId,
+    String proxyUsername
+) implements AuthenticatedPrincipal, Serializable {
 
   @Override
   public String getName() {
-    return wuaId.toString();
+    return Objects.nonNull(proxyWuaId) ? proxyWuaId.toString() : wuaId.toString();
   }
 
   public String displayName() {
-    return "%s %s".formatted(forename, surname);
+    var userName = String.format("%s %s", forename, surname);
+    return Objects.nonNull(proxyUsername) ? String.format("%s/%s", proxyUsername, userName) : userName;
   }
 }
